Trying a gist I found to get a fixed bg image on mobile. We'll see if it works.

--- a/style/sass/style.scss
+++ b/style/sass/style.scss
@@ -16,11 +16,22 @@ $dark: #202428;
 //////////
 
 html, body{
-	height: 100%;
+	//height: 100%;
+}
+
+html {
+    background: url("../../assets/citra.png") no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    height: 100%;
+    //overflow: hidden;
 }
 
 body{
-	background-image: url("../../assets/citra.png");
+	//height: 100%;
+	//background-image: url("../../assets/citra.png");
 	background-size: cover;
 	background-position: center;
 	background-attachment: fixed;
@@ -28,7 +39,7 @@ body{
 		"header"
 		"main";
 	overflow-x: hidden;
-	background-color: $dark;
+	//background-color: $dark;
 }
 
 ///////////////
